2주차 Step4 EntityEntry PR 드립니다 (#86)
* feature(CloneUtils): 리뷰사항 4. constructor 닫고 동일성 테스트하기

* feature(CloneUtils): 리뷰사항 0. select by fields 생성했습니다.

* feature(Persister, Context): 리뷰사항 5. transaction 끝날때(flush군아) sync 부를수있게 진행하기

* test(동일성): 리뷰사항 2. 동일성 진행했습니다.

* test(persister delete): 테스트 실패 제거

* feature(EntityManager): putPersistenceContext 생성

* feature(EntityEntry): putPersistenceContext 생성
1. LOADING -> MANAGED
2. SAVING -> MANAGED
3. DELETED -> GONE
4. READONLY?? -> DirtyChecking 만 안하면 될것같다.
readonly 값을 em에서 받아야되는데 해당 부분을 어디서 구현해야할지 모르겠다.

* test(PersistenceContext): PersistenceContext 에서 EntityEntry 상탯값 테스트 했습니다.
1. find 시에 (db값 호출시) LOADING -> MANAGED
2. persist 시에 (저장시) SAVING -> MANAGED
3. remove 시에 (삭제시) DELETED -> GONE
4. READONLY?? -> DirtyChecking 만 안하면 될것같다.
readonly 값을 em에서 받아야되는데 해당 부분을 어디서 구현해야할지 모르겠다.

* feat(review):
1. EntityEntry 인터페이스 분리
2. isSamewithSnapshot 추가 구현
3. find Optional 처리 하지않음.

---------

Co-authored-by: Jivebread <spark@troy.edu>